fixed overflow isue

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 
 
  body{
-    overflow-x: hidden;
     background-color: #FFFFE4;
 }
+
 
